# hyperlight-unikraft

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md
.github/workflows/: benchmarks.yml  host-checks.yml  publish-examples.yml  release.yml  sync-gh-pages.yml  test-examples.yml
demos/pptx-gen/: .env.example  .gitignore  Cargo.toml  Dockerfile.rootfs  Makefile  README.md  kraft.yaml
demos/pptx-gen/src/: main.rs
docs/: releasing.md
examples/: Justfile
examples/dotnet/: Dockerfile  HelloDotnet.csproj  Justfile  Program.cs  kraft.yaml
examples/dotnet-nativeaot/: Dockerfile  HelloNativeAot.csproj  Justfile  Program.cs  kraft.yaml
examples/go/: Dockerfile  Justfile  hello.go  kraft.yaml  patch_interp.py
examples/helloworld-c/: Dockerfile  Justfile  hello.c  kraft.yaml
examples/hostfs-posix-c/: Dockerfile  Justfile  hello.c  kraft.yaml
examples/hostfs-posix-py/: Dockerfile  Justfile  hostfs_demo.py  kraft.yaml
examples/multifn-c/: Dockerfile  Justfile  kraft.yaml  main.c
examples/networking-py/: Dockerfile  Justfile  echo_server.py  http_get.py  https_test.py  kraft.yaml  urllib_get.py
examples/nodejs/: Dockerfile  Justfile  hello.js  kraft.yaml
examples/powershell/: Dockerfile  Justfile  hello.ps1  kraft.yaml
examples/python/: Dockerfile  Justfile  hello.py  kraft.yaml
examples/python-agent/: Dockerfile  Justfile  agent.py  kraft.yaml
examples/python-agent-driver/: Dockerfile  Justfile  hl_pydriver.c  kraft.yaml
examples/python-tools/: Dockerfile  Justfile  hyperlight.py  kraft.yaml  test_tools.py
examples/rust/: Dockerfile  Justfile  hello.rs  kraft.yaml
examples/shell/: Dockerfile  Justfile  demo.sh  kraft.yaml
host/: Cargo.toml
host/examples/: pyhl_as_library.rs  test_cpiovfs.rs
host/include/: hyperlight_unikraft.h
host/src/: ffi.rs  lib.rs  main.rs  pyhl.rs  stderr_capture.rs
host/tests/: pyhl_runtime.rs  snapshot_roundtrip.rs
runtimes/: nodejs.Dockerfile  powershell.Dockerfile  python.Dockerfile  shell.Dockerfile
scripts/: test-examples.ps1  test-examples.sh
