[package]
name = "hyperlight-unikraft-host"
version = "0.1.0"
edition = "2021"
description = "Embedded Hyperlight host for running Unikraft unikernels"
license = "MIT OR Apache-2.0"

[lib]
name = "hyperlight_unikraft"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "hyperlight-unikraft"
path = "src/main.rs"

[[bin]]
name = "multifn-test"
path = "src/bin/multifn_test.rs"

[[bin]]
name = "pydriver-run"
path = "src/bin/pydriver_run.rs"

[[bin]]
name = "pyhl"
path = "src/bin/pyhl.rs"

[dependencies]
# hyperlight-dev/hyperlight#1373 — Ludvig's Snapshot::to_file/from_file
# Uses PAGE_READONLY mapping (no host commit charge per VM).
hyperlight-host = { git = "https://github.com/hyperlight-dev/hyperlight", branch = "disk_snapshot_copy", features = ["executable_heap", "hw-interrupts"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
memmap2 = "0.9"
serde_json = "1"
base64 = "0.22"
socket2 = { version = "0.5", features = ["all"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_IO", "Win32_System_Ioctl", "Win32_Storage_FileSystem"] }

