[package]
name = "hyperlight-pptx-gen"
version = "0.1.0"
edition = "2021"
description = "PowerPoint generator using Hyperlight-Unikraft sandboxed Python execution"

[dependencies]
# Hyperlight-Unikraft library
hyperlight-unikraft = { path = "../../host", package = "hyperlight-unikraft-host" }

# OpenAI API client
async-openai = "0.25"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# Base64 encoding/decoding
base64 = "0.22"

# Temp files
tempfile = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
